--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.0)
 project("windfall" LANGUAGES CXX VERSION 0.02)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeMods")
+
 find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glm REQUIRED)
+find_package(Bullet REQUIRED)
 
 set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
 
@@ -12,6 +15,7 @@ include_directories(
         ${INCLUDE_DIR}
         ${SDL2_INCLUDE_DIRS}
         ${OPENGL_INCLUDE_DIR}
+	${BULLET_INCLUDE_DIRS}
         ${GLEW_INCLUDE_DIRS}
         ${GLM_INCLUDE_DIRS}
 )
@@ -22,12 +26,19 @@ set(SOURCES
         src/Framework/Input.cpp
         src/Framework/Shader.cpp
         src/Framework/Mesh.cpp
+	include/Moxie.h
+	include/MoxieCore/ChatterBox.h
+	include/MoxieCore/Display.h
+	include/MoxieCore/Input.h
+	include/MoxieCore/Mesh.h
+	include/MoxieCore/Shader.h
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME}
-        ${SDL2_LIBRARIES}
+        ${SDL2_LIBRARY}
         ${OPENGL_LIBRARIES}
+	${BULLET_LIBRARIES}
         ${GLEW_LIBRARIES}
 )
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_range_for)
