--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
 
 include_directories(
         ${INCLUDE_DIR}
-        ${SDL_INCLUDE_DIR}
+        ${SDL2_INCLUDE_DIRS}
         ${OPENGL_INCLUDE_DIR}
         ${GLEW_INCLUDE_DIRS}
         ${GLM_INCLUDE_DIRS}
@@ -41,7 +41,7 @@ set(SOURCES
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME}
-        ${SDL2_LIBRARY}
+        ${SDL2_LIBRARIES}
         ${OPENGL_LIBRARIES}
         ${GLEW_LIBRARIES}
 )
